--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+* {
+  font-family: Roboto, sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card {
+ margin: 25px;
+ padding: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.tableContainer {
+  margin: 25px;
+  padding: 15px;
+  width: 50px;
+  margin-right: 200px;
+ }
+
+.formInput {
+  display: grid;
+  grid-template-columns: 2;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.textInput {
+  height: 45px;
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  height: 45px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#tableHead {
+  background-color: #3f51b5;
+  color: #ffffff;
+  border-top-right-radius: 15%;
+  border-top-left-radius: 15%;
 }
+
+.valuePending{
+  color: grey;
+}
+
